# meson_experiment

./: README.md  config.h.in  main.c  meson.build  meson_options.txt
subprojects/math/: meson.build
