option('enabled', type : 'boolean', value : false)
option('test', type : 'boolean', value : false)


# option('someoption', type : 'string', value : 'optval', description : 'An option')
# option('combo_opt', type : 'combo', choices : ['one', 'two', 'three'], value : 'three')
# option('integer_opt', type : 'integer', min : 0, max : 5, value : 3)
# option('free_array_opt', type : 'array', value : ['one', 'two'])
# option('array_opt', type : 'array', choices : ['one', 'two', 'three'], value : ['one', 'two'])
